<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/habit_entry_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/habit_entry_text_view"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/habit_entry_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_toRightOf="@id/habit_entry_text_view"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/habit_hint"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/action_entry_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/habit_entry_text_view"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="38dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/action_entry_text_view"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/action_entry_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/habit_entry_edit_text"
        android:layout_margin="8dp"
        android:layout_toRightOf="@id/habit_entry_text_view"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/action_hint"
        android:inputType="numberDecimal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/btn_insertion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_entry_edit_text"
        android:text="@string/btn_insertion" />
</RelativeLayout>